sidux-manual-reader (0.1.1) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 21 Aug 2009 16:07:23 +0200

sidux-manual-reader (0.1.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * Initial release.
  * Language change problem solved
  * Search mode to quickSearch
  * copyright informations updated
  * sidux-manual-common as dependency
  * svg icons added

  [ Stefan Lippers-Hollmann ]
  * fix sidux-manual-reader.desktop file name.
  * add Vcs-Svn/ Vcs-Browser URLs.
  * fix dangling comma in build-depends.
  * drop no longer required encoding information for desktop files.
  * remove spurious spaces in front of the long description.
  * bump standards version to 3.8.3, no changes necessary.

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 20 Aug 2009 10:38:27 +0200