@@ -26,8 +26,17 @@
        </property>
        <item row="0" column="0">
         <widget class="QLineEdit" name="searchLineEdit">
+         <property name="cursor">
+          <cursorShape>IBeamCursor</cursorShape>
+         </property>
          <property name="inputMask">
           <string/>
+         </property>
+         <property name="text">
+          <string>Type your keyword search here</string>
+         </property>
+         <property name="cursorPosition">
+          <number>0</number>
          </property>
          <property name="dragEnabled">
           <bool>false</bool>
@@ -53,7 +62,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>/usr/share/sidux-manual-reader/icons/go-previous.svg</normaloff>/usr/share/sidux-manual-reader/icons/go-previous.svg</iconset>
+           <normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-previous.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-previous.svg</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -79,7 +88,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>/usr/share/sidux-manual-reader/icons/go-home.svg</normaloff>/usr/share/sidux-manual-reader/icons/go-home.svg</iconset>
+           <normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-home.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-home.svg</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -112,7 +121,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>/usr/share/sidux-manual-reader/icons/go-next.svg</normaloff>/usr/share/sidux-manual-reader/icons/go-next.svg</iconset>
+           <normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-next.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-next.svg</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -135,7 +144,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>/usr/share/sidux-manual-reader/icons/preferences-desktop-accessibility.svg</normaloff>/usr/share/sidux-manual-reader/icons/preferences-desktop-accessibility.svg</iconset>
+           <normaloff>../../../../../usr/share/sidux-manual-reader/icons/preferences-desktop-accessibility.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/preferences-desktop-accessibility.svg</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -237,7 +246,7 @@
              </property>
              <property name="icon">
               <iconset>
-               <normaloff>/usr/share/sidux-manual-reader/icons/go-previous.svg</normaloff>/usr/share/sidux-manual-reader/icons/go-previous.svg</iconset>
+               <normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-previous.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-previous.svg</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -257,7 +266,7 @@
              </property>
              <property name="icon">
               <iconset>
-               <normaloff>/usr/share/sidux-manual-reader/icons/go-next.svg</normaloff>/usr/share/sidux-manual-reader/icons/go-next.svg</iconset>
+               <normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-next.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/go-next.svg</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -367,7 +376,7 @@
   <action name="actionClose">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual-reader/icons/application-exit.svg</normaloff>/usr/share/sidux-manual-reader/icons/application-exit.svg</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual-reader/icons/application-exit.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/application-exit.svg</iconset>
    </property>
    <property name="text">
     <string>Close</string>
@@ -379,7 +388,7 @@
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/da-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/da-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/da-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/da-flag.png</iconset>
    </property>
    <property name="text">
     <string notr="true">Dansk</string>
@@ -394,7 +403,7 @@
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/de-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/de-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/de-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/de-flag.png</iconset>
    </property>
    <property name="text">
     <string notr="true">Deutsch</string>
@@ -409,7 +418,7 @@
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/en-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/en-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/en-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/en-flag.png</iconset>
    </property>
    <property name="text">
     <string notr="true">English</string>
@@ -424,7 +433,7 @@
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/el-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/el-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/el-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/el-flag.png</iconset>
    </property>
    <property name="text">
     <string notr="true">Ελληνικά</string>
@@ -439,7 +448,7 @@
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/es-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/es-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/es-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/es-flag.png</iconset>
    </property>
    <property name="text">
     <string notr="true">Español</string>
@@ -454,7 +463,7 @@
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/fr-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/fr-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/fr-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/fr-flag.png</iconset>
    </property>
    <property name="text">
     <string notr="true">Français</string>
@@ -469,7 +478,7 @@
   <action name="actionHr">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/hr-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/hr-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/hr-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/hr-flag.png</iconset>
    </property>
    <property name="text">
     <string>Hrvatski</string>
@@ -481,7 +490,7 @@
   <action name="actionIt">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/it-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/it-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/it-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/it-flag.png</iconset>
    </property>
    <property name="text">
     <string>Italiano</string>
@@ -493,7 +502,7 @@
   <action name="actionNl">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/nl-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/nl-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/nl-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/nl-flag.png</iconset>
    </property>
    <property name="text">
     <string>Nederlands</string>
@@ -505,7 +514,7 @@
   <action name="actionPl">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/pl-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/pl-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/pl-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/pl-flag.png</iconset>
    </property>
    <property name="text">
     <string>Polski</string>
@@ -517,7 +526,7 @@
   <action name="actionJa">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/ja-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/ja-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/ja-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/ja-flag.png</iconset>
    </property>
    <property name="text">
     <string>日本語 Nihongo</string>
@@ -529,7 +538,7 @@
   <action name="actionPt">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/pt-br-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/pt-br-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/pt-br-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/pt-br-flag.png</iconset>
    </property>
    <property name="text">
     <string>Português BR</string>
@@ -541,7 +550,7 @@
   <action name="actionRo">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/ro-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/ro-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/ro-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/ro-flag.png</iconset>
    </property>
    <property name="text">
     <string>Română</string>
@@ -553,7 +562,7 @@
   <action name="actionRu">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual/lib/flags/ru-flag.png</normaloff>/usr/share/sidux-manual/lib/flags/ru-flag.png</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual/lib/flags/ru-flag.png</normaloff>../../../../../usr/share/sidux-manual/lib/flags/ru-flag.png</iconset>
    </property>
    <property name="text">
     <string>Русский</string>
@@ -565,7 +574,7 @@
   <action name="actionAboutSidux">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/sidux-manual-reader/icons/dialog-question.svg</normaloff>/usr/share/sidux-manual-reader/icons/dialog-question.svg</iconset>
+     <normaloff>../../../../../usr/share/sidux-manual-reader/icons/dialog-question.svg</normaloff>../../../../../usr/share/sidux-manual-reader/icons/dialog-question.svg</iconset>
    </property>
    <property name="text">
     <string>About sidux</string>
@@ -574,7 +583,7 @@
   <action name="actionAboutReader">
    <property name="icon">
     <iconset>
-     <normaloff>/usr/share/icons/hicolor/32x32/apps/sidux-manual.png</normaloff>/usr/share/icons/hicolor/32x32/apps/sidux-manual.png</iconset>
+     <normaloff>../../../../../usr/share/icons/hicolor/32x32/apps/sidux-manual.png</normaloff>../../../../../usr/share/icons/hicolor/32x32/apps/sidux-manual.png</iconset>
    </property>
    <property name="text">
     <string>About the reader</string>
@@ -1070,6 +1079,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>searchLineEdit</sender>
+   <signal>cursorPositionChanged(int,int)</signal>
+   <receiver>Smr</receiver>
+   <slot>clearSearch()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>376</x>
+     <y>88</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>376</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>showChapter0(QTreeWidgetItem*,int)</slot>
@@ -1102,5 +1127,6 @@
   <slot>aboutSidux()</slot>
   <slot>aboutReader()</slot>
   <slot>forward1(QAction*)</slot>
+  <slot>clearSearch()</slot>
  </slots>
 </ui>
